--- a/src/main/resources/assets/terraccessories/lang/en_us.json
+++ b/src/main/resources/assets/terraccessories/lang/en_us.json
@@ -1,6 +1,8 @@
 {
   "item.terraccessories.infinite_water_bucket": "Infinite Water Bucket",
-  "item.terraccessories.infinite_water_bucket.tooltip": "Infinite water source",
+  "item.terraccessories.infinite_water_bucket.tooltip": "Hmm water",
+  "item.terraccessories.infinite_lava_bucket": "Infinite Lava Bucket",
+  "item.terraccessories.infinite_lava_bucket.tooltip": "Hmm lava",
   "item.terraccessories.magic_mirror": "Magic Mirror",
   "item.terraccessories.magic_mirror.tooltip": "Teleports you back to home safely",
   "itemGroup.terraccessories": "Terraccessories"
