--- a/src/main/resources/assets/terraccessories/lang/en_us.json
+++ b/src/main/resources/assets/terraccessories/lang/en_us.json
@@ -9,5 +9,11 @@
   "item.terraccessories.magic_mirror.success": "You feel a warm sensation",
   "item.terraccessories.magic_mirror.missing_xp": "You require more experience to use this mirror",
   "item.terraccessories.magic_mirror.missing_spawn": "You gaze into the cloudy mirror... It can't find a valid spawnpoint",
-  "item.terraccessories.magic_mirror.power": "This mirror is not powerful enough for cross-dimensional travel!"
+  "item.terraccessories.magic_mirror.power": "This mirror is not powerful enough for cross-dimensional travel!",
+  "item.terraccessories.ice_mirror": "Ice Mirror",
+  "item.terraccessories.ice_mirror.tooltip": "Gaze in the mirror to return home",
+  "item.terraccessories.ice_mirror.success": "You feel a cold sensation",
+  "item.terraccessories.ice_mirror.missing_xp": "You require more experience to use this mirror",
+  "item.terraccessories.ice_mirror.missing_spawn": "You gaze into the cloudy mirror... It can't find a valid spawnpoint",
+  "item.terraccessories.ice_mirror.power": "This mirror is not powerful enough for cross-dimensional travel!"
 }
