--- a/src/main/resources/assets/terraccessories/lang/en_us.json
+++ b/src/main/resources/assets/terraccessories/lang/en_us.json
@@ -15,5 +15,12 @@
   "item.terraccessories.ice_mirror.success": "You feel a cold sensation",
   "item.terraccessories.ice_mirror.missing_xp": "You require more experience to use this mirror",
   "item.terraccessories.ice_mirror.missing_spawn": "You gaze into the cloudy mirror... It can't find a valid spawnpoint",
-  "item.terraccessories.ice_mirror.power": "This mirror is not powerful enough for cross-dimensional travel!"
+  "item.terraccessories.ice_mirror.power": "This mirror is not powerful enough for cross-dimensional travel!",
+  "item.terraccessories.demon_conch": "Demon Conch",
+  "item.terraccessories.demon_conch.tooltip": "If you listen closely, you can hear screams",
+  "item.terraccessories.demon_conch.tooltip2": "Watch your toes'",
+  "item.terraccessories.demon_conch.already_nether": "The demon conch doesn't seem to work here",
+  "item.terraccessories.demon_conch.success": "The air sings with the sound of the underworld",
+  "item.terraccessories.demon_conch.fail": "The demon conch remains silent",
+  "item.terraccessories.demon_conch.non_suitable": "Maybe you should try this in a more suitable location"
 }
