Complete mirrors refactor

--- a/src/main/resources/assets/terraccessories/lang/en_us.json
+++ b/src/main/resources/assets/terraccessories/lang/en_us.json
@@ -7,32 +7,33 @@
   "text.config.terraccessories.option.enable_accessories.tooltip": "Enable or disable all accessories",
   "text.config.terraccessories.section.tools": "Tools",
   "text.config.terraccessories.category.mirror": "Mirrors",
+  "text.config.terraccessories.category.mirror.mirror_debuffs": "Mirrors debuffs",
   "text.config.terraccessories.option.mirror.mirror_interdimensional": "Allow interdimensional travel",
   "text.config.terraccessories.option.mirror.mirror_interdimensional.tooltip": "Allow mirrors to teleport between dimensions",
-  "text.config.terraccessories.option.mirror.mirror_debuff": "Apply debuff after use",
-  "text.config.terraccessories.option.mirror.mirror_debuff.tooltip": "Apply debuff after use",
-  "text.config.terraccessories.option.mirror.mirror_cooldown": "Cooldown between uses",
-  "text.config.terraccessories.option.mirror.mirror_cooldown.tooltip": "How many seconds to wait between use",
   "text.config.terraccessories.option.mirror.mirror_cost": "Level cost per use",
   "text.config.terraccessories.option.mirror.mirror_cost.tooltip": "How much experience levels are required to use the mirror",
+  "text.config.terraccessories.option.mirror.mirror_debuff": "Apply debuff after use",
+  "text.config.terraccessories.option.mirror.mirror_debuff.tooltip": "Apply debuff after use",
+  "text.config.terraccessories.option.mirror.mirror_debuffs.mirror_blindness": "Blindness Debuff",
+  "text.config.terraccessories.option.mirror.mirror_debuffs.mirror_blindness.tooltip": "Apply blindness debuff after use",
+  "text.config.terraccessories.option.mirror.mirror_debuffs.mirror_blindness_duration": "Blindness Duration",
+  "text.config.terraccessories.option.mirror.mirror_debuffs.mirror_blindness_duration.tooltip": "How long the blindness debuff lasts",
+  "text.config.terraccessories.option.mirror.mirror_debuffs.mirror_slowness": "Slowness Debuff",
+  "text.config.terraccessories.option.mirror.mirror_debuffs.mirror_slowness.tooltip": "Apply Slowness debuff after use",
+  "text.config.terraccessories.option.mirror.mirror_debuffs.mirror_slowness_duration": "Slowness Duration",
+  "text.config.terraccessories.option.mirror.mirror_debuffs.mirror_slowness_duration.tooltip": "How long the slowness debuff lasts",
 
   "item.terraccessories.bucket.bottomless_water_bucket": "Bottomless Water Bucket",
 
   "item.terraccessories.bucket.bottomless_lava_bucket": "Bottomless Lava Bucket",
 
-  "item.terraccessories.magic_mirror": "Magic Mirror",
-  "item.terraccessories.magic_mirror.tooltip": "Gaze in the mirror to return home",
-  "item.terraccessories.magic_mirror.success": "You feel a warm sensation",
-  "item.terraccessories.magic_mirror.missing_xp": "You require more experience to use this mirror",
-  "item.terraccessories.magic_mirror.missing_spawn": "You gaze into the cloudy mirror... It can't find a valid spawnpoint",
-  "item.terraccessories.magic_mirror.power": "This mirror is not powerful enough for cross-dimensional travel!",
-
-  "item.terraccessories.ice_mirror": "Ice Mirror",
-  "item.terraccessories.ice_mirror.tooltip": "Gaze in the mirror to return home",
-  "item.terraccessories.ice_mirror.success": "You feel a cold sensation",
-  "item.terraccessories.ice_mirror.missing_xp": "You require more experience to use this mirror",
-  "item.terraccessories.ice_mirror.missing_spawn": "You gaze into the cloudy mirror... It can't find a valid spawnpoint",
-  "item.terraccessories.ice_mirror.power": "This mirror is not powerful enough for cross-dimensional travel!",
+  "item.terraccessories.mirrors.magic_mirror": "Magic Mirror",
+  "item.terraccessories.mirrors.ice_mirror": "Ice Mirror",
+  "item.terraccessories.mirrors.tooltip": "Gaze in the mirror to return home",
+  "item.terraccessories.mirrors.success": "You feel a warm sensation",
+  "item.terraccessories.mirrors.missing_xp": "You require more experience to use this mirror",
+  "item.terraccessories.mirrors.missing_spawn": "You gaze into the cloudy mirror... It can't find a valid spawnpoint",
+  "item.terraccessories.mirrors.power": "This mirror is not powerful enough for cross-dimensional travel!",
 
   "item.terraccessories.demon_conch": "Demon Conch",
   "item.terraccessories.demon_conch.tooltip": "If you listen closely, you can hear screams",
