--- a/src/main/resources/assets/terraccessories/lang/en_us.json
+++ b/src/main/resources/assets/terraccessories/lang/en_us.json
@@ -47,6 +47,7 @@
   "item.terraccessories.crate": "Crate",
 
   "item.terraccessories.aglet": "Aglet",
+  "item.terraccessories.aklet_of_the_wind": "Aklet of the Wind",
 
   "item.terraccessories.random_teleportation_potion": "Random Teleportation Potion"
 }
