--- a/src/main/resources/assets/terraccessories/lang/en_us.json
+++ b/src/main/resources/assets/terraccessories/lang/en_us.json
@@ -50,6 +50,7 @@
   "item.terraccessories.jump_bottle": "Cloud In A Bottle",
   "item.terraccessories.fart_jump_bottle": "Fart In A Bottle",
   "item.terraccessories.aklet_of_the_wind": "Aklet of the Wind",
+  "item.terraccessories.lucky_horseshoe": "Lucky Horseshoe",
 
   "item.terraccessories.random_teleportation_potion": "Random Teleportation Potion"
 }
