--- a/src/main/resources/assets/terraccessories/lang/en_us.json
+++ b/src/main/resources/assets/terraccessories/lang/en_us.json
@@ -52,5 +52,7 @@
   "item.terraccessories.aklet_of_the_wind": "Aklet of the Wind",
   "item.terraccessories.lucky_horseshoe": "Lucky Horseshoe",
 
-  "item.terraccessories.random_teleportation_potion": "Random Teleportation Potion"
+  "item.terraccessories.random_teleportation_potion": "Random Teleportation Potion",
+
+  "block.terraccessories.tinkerer_workshop": "Tinkerer Workshop"
 }
