--- a/src/main/resources/assets/terraccessories/lang/en_us.json
+++ b/src/main/resources/assets/terraccessories/lang/en_us.json
@@ -22,6 +22,17 @@
   "text.config.terraccessories.option.mirror.mirror_debuffs.mirror_slowness.tooltip": "Apply Slowness debuff after use",
   "text.config.terraccessories.option.mirror.mirror_debuffs.mirror_slowness_duration": "Slowness Duration",
   "text.config.terraccessories.option.mirror.mirror_debuffs.mirror_slowness_duration.tooltip": "How long the slowness debuff lasts",
+  "text.config.terraccessories.category.rod_of_discord": "Rod of Discord",
+  "text.config.terraccessories.option.rod_of_discord.range": "Rod of Discord range",
+  "text.config.terraccessories.option.rod_of_discord.range.tooltip": "How far the rod of discord can teleport you",
+  "text.config.terraccessories.option.rod_of_discord.chaos_duration": "Chaos debuff duration",
+  "text.config.terraccessories.option.rod_of_discord.chaos_duration.tooltip": "How long the chaos debuff lasts",
+  "text.config.terraccessories.option.rod_of_discord.isUnbreakable": "Unbreakable",
+  "text.config.terraccessories.option.rod_of_discord.isUnbreakable.tooltip": "No longer lose durability on use",
+  "text.config.terraccessories.option.rod_of_discord.teleportParticle": "Teleport particles",
+  "text.config.terraccessories.option.rod_of_discord.teleportParticle.tooltip": "Show particles when teleporting",
+  "text.config.terraccessories.option.rod_of_discord.teleportSound": "Teleport sound",
+  "text.config.terraccessories.option.rod_of_discord.teleportSound.tooltip": "Play sound when teleporting",
 
   "itemGroup.terraccessories.main": "Terraccessories",
 
@@ -48,6 +59,10 @@
 
   "item.terraccessories.bottomless_water_bucket": "Bottomless Water Bucket",
   "item.terraccessories.bottomless_lava_bucket": "Bottomless Lava Bucket",
+
+  "item.terraccessories.rod_of_discord": "Rod of Discord",
+  "item.terraccessories.rod_of_discord.tooltip": "Teleports you forward",
+  "item.terraccessories.rod_of_discord.tooltip2": "Provoke the chaos",
 
   "item.terraccessories.crate": "Crate",
 
