Add particles and sound to RodOfDiscord

--- a/src/main/resources/assets/terraccessories/lang/en_us.json
+++ b/src/main/resources/assets/terraccessories/lang/en_us.json
@@ -23,14 +23,18 @@
   "text.config.terraccessories.option.mirror.mirror_debuffs.mirror_slowness_duration": "Slowness Duration",
   "text.config.terraccessories.option.mirror.mirror_debuffs.mirror_slowness_duration.tooltip": "How long the slowness debuff lasts",
   "text.config.terraccessories.category.rod_of_discord": "Rod of Discord",
-  "text.config.terraccessories.option.rod_of_discord.range": "Rod of Discord range",
-  "text.config.terraccessories.option.rod_of_discord.range.tooltip": "How far the rod of discord can teleport you",
+  "text.config.terraccessories.option.rod_of_discord.minRange": "Minimal teleportation range",
+  "text.config.terraccessories.option.rod_of_discord.minRange.tooltip": "Minimal distance to teleport",
+  "text.config.terraccessories.option.rod_of_discord.maxRange": "Maximal teleportation range",
+  "text.config.terraccessories.option.rod_of_discord.maxRange.tooltip": "Maximal distance to teleport",
+  "text.config.terraccessories.option.rod_of_discord.useTime": "Use time",
+  "text.config.terraccessories.option.rod_of_discord.useTime.tooltip": "How long it takes to fully charge the rod",
   "text.config.terraccessories.option.rod_of_discord.chaos_duration": "Chaos debuff duration",
   "text.config.terraccessories.option.rod_of_discord.chaos_duration.tooltip": "How long the chaos debuff lasts",
   "text.config.terraccessories.option.rod_of_discord.isUnbreakable": "Unbreakable",
   "text.config.terraccessories.option.rod_of_discord.isUnbreakable.tooltip": "No longer lose durability on use",
-  "text.config.terraccessories.option.rod_of_discord.teleportParticle": "Teleport particles",
-  "text.config.terraccessories.option.rod_of_discord.teleportParticle.tooltip": "Show particles when teleporting",
+  "text.config.terraccessories.option.rod_of_discord.teleportParticles": "Teleport particles",
+  "text.config.terraccessories.option.rod_of_discord.teleportParticles.tooltip": "Show particles when teleporting",
   "text.config.terraccessories.option.rod_of_discord.teleportSound": "Teleport sound",
   "text.config.terraccessories.option.rod_of_discord.teleportSound.tooltip": "Play sound when teleporting",
 
