Add chaos debuff

--- a/src/main/resources/assets/terraccessories/lang/en_us.json
+++ b/src/main/resources/assets/terraccessories/lang/en_us.json
@@ -84,5 +84,6 @@
 
   "block.terraccessories.tinkerer_workshop": "Tinkerer Workshop",
 
-  "effect.terraccessories.accessories_regeneration": "Regeneration"
+  "effect.terraccessories.accessories_regeneration": "Regeneration",
+  "effect.terraccessories.chaos": "Chaos state"
 }
