--- a/src/main/resources/assets/terraccessories/lang/en_us.json
+++ b/src/main/resources/assets/terraccessories/lang/en_us.json
@@ -63,6 +63,10 @@
 
   "item.terraccessories.staff_of_regrowth": "Staff of Regrowth",
   "item.terraccessories.staff_of_regrowth.tooltip": "Creates grass on dirt",
+  "item.terraccessories.staff_of_regrowth.success": "Sucessfuly repaired",
+  "item.terraccessories.staff_of_regrowth.fail_damage": "The staff is not damaged enough",
+  "item.terraccessories.staff_of_regrowth.fail_bonemeal": "You need bonemeal to repair the staff",
+
 
   "item.terraccessories.bottomless_water_bucket": "Bottomless Water Bucket",
   "item.terraccessories.bottomless_lava_bucket": "Bottomless Lava Bucket",
