--- a/src/main/resources/assets/terraccessories/lang/en_us.json
+++ b/src/main/resources/assets/terraccessories/lang/en_us.json
@@ -67,6 +67,13 @@
   "item.terraccessories.staff_of_regrowth.fail_damage": "The staff is not damaged enough",
   "item.terraccessories.staff_of_regrowth.fail_bonemeal": "You need bonemeal to repair the staff",
 
+  "item.terraccessories.axe_of_regrowth": "Axe of Regrowth",
+  "item.terraccessories.axe_of_regrowth.tooltip": "Creates grass on dirt",
+  "item.terraccessories.axe_of_regrowth.tooltip2": "Plants sapplings when cutting trees",
+  "item.terraccessories.axe_of_regrowth.success": "Sucessfuly repaired",
+  "item.terraccessories.axe_of_regrowth.fail_damage": "The axe is not damaged enough",
+  "item.terraccessories.axe_of_regrowth.fail_bonemeal": "You need bonemeal to repair the axe",
+
 
   "item.terraccessories.bottomless_water_bucket": "Bottomless Water Bucket",
   "item.terraccessories.bottomless_lava_bucket": "Bottomless Lava Bucket",
