--- a/src/main/resources/assets/terraccessories/lang/en_us.json
+++ b/src/main/resources/assets/terraccessories/lang/en_us.json
@@ -70,9 +70,9 @@
   "item.terraccessories.axe_of_regrowth": "Axe of Regrowth",
   "item.terraccessories.axe_of_regrowth.tooltip": "Creates grass on dirt",
   "item.terraccessories.axe_of_regrowth.tooltip2": "Plants sapplings when cutting trees",
-  "item.terraccessories.axe_of_regrowth.success": "Sucessfuly repaired",
-  "item.terraccessories.axe_of_regrowth.fail_damage": "The axe is not damaged enough",
-  "item.terraccessories.axe_of_regrowth.fail_bonemeal": "You need bonemeal to repair the axe",
+  "item.terraccessories.axe_of_regrowth.repair.success": "Sucessfuly repaired",
+  "item.terraccessories.axe_of_regrowth.repair.durability": "The axe is not damaged enough",
+  "item.terraccessories.axe_of_regrowth.repair.bonemeal": "You need bonemeal to repair the axe",
 
 
   "item.terraccessories.bottomless_water_bucket": "Bottomless Water Bucket",
